--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -1,11 +1,14 @@
 header {
     width: 100%;
     height: 80px;
-    background-color: #0f0f0f;
-    position: absolute;
+    background-color: rgba(15, 15, 15,0.5);
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 99999;
+    backdrop-filter: blur(8px);
+
+    box-shadow: inset 0px -1px 1px #1F262E;
 }
 nav {
     width: 100%;
