--- a/css/style.scss
+++ b/css/style.scss
@@ -314,9 +314,10 @@ main .layouts {
 
     main section {
         justify-content: center;
+        padding: 130px 20px 50px 20px;
     }
     main .layouts {
-        width: 90%;
+        width: 100%;
     }
 
     .slider-img {
